fix: wrong gap

--- a/src/components/NewsletterForm.css
+++ b/src/components/NewsletterForm.css
@@ -28,7 +28,6 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    gap: 17px;
     margin-bottom: 89px;
     font-size: 14px;
     max-width: 295px;
